static/style/style.css
/*Declare Color Variables*/
:root {
	--offwhite: hsl(0, 0%, 90%);
	--darkgray: #2D3030;
	--palegreen: #8DD883;
  --paleyellow: #D8D883;
  --palepurple: #D083D8;
  --paleorange: #FFDFBF;
  --palered: #D38080;
}

/*Add Custom Font Family*/
@font-face {
	font-family: Muli;
	src: url("Muli Font/Muli.ttf");
}

@font-face {
	font-family: Muli;
	src: url("Muli Font/Muli-Bold.ttf");
	font-weight: bold;
}

/*Specify Webpage Height*/
html {
  height: 100%;
  overflow: auto;
}

/*Style Background of Webpages*/
body {
  font-family: Muli;
  background-image: linear-gradient(145deg, var(--darkgray), #101515);
  padding-bottom: 60px;
  position: relative;
  height: 100%;
  width: 100%;
  overflow-y: scroll;
  overflow-x: hidden;
  padding:0;
  margin:0px;
}

@keyframes gradientscroll {
  0% {
    background-position: 0% 0%;
  }
  100% {
    background-position: 100% 100%;
  }
}

h1 {
  font-family: Muli;
  font-size: 40px;
  font-weight: normal;
  color: var(--darkgray);
}

/*Style Default Links*/
a {
  color: var(--offwhite);
}

a:hover {
  color: blue;
}

/*Style Navigation Bar*/
nav {
  float: right;
  margin:30px 90px;
}
nav ul {
  list-style: none;
}
nav ul li {
  font-family: Muli;
  float: left;
}
nav ul li a {
  text-decoration: none;
  color: var(--palegreen);
  font-size: 20px;
  margin-left:16px;
}
nav ul li:hover {
  font-style: italic;
  font-weight: bold;
}

/*Style Homepage Header Content*/
header{
  position: absolute;
  top: 0%;
  left: 0%;
  width: 100%;
  margin: 0;
  padding: 0;
}

.header-content {
  font-family: Muli;
  margin-top: 15%;
  text-align: center;
  color: var(--offwhite);
}
.header-content h1{
  color: var(--palegreen);
  text-transform: uppercase;
  font-size: 3em;
  letter-spacing: 1px;
}
.header-content p {
  font-size: 20px;
  line-height: 1.5;
  margin: 20px auto;
}
button, input[type="submit"] {
  min-width: 140px;
  margin: 20px 10px;
  color: var(--darkgray);
  font-family: Muli;
  font-size: 18px;
  border: 1px solid var(--palegreen);
  font-weight: 500;
  background: var(--palegreen);
  border-radius: 20px;
  padding: 10px;
  cursor:pointer;
}
button:hover {
  font-style: italic;
  font-weight: bold;
}

button.unclickable {
  pointer-events: none;
}

button:hover.unclickable {
  font-style: normal;
  font-weight: normal;
  cursor: auto;
}

/*Style Story Text */
.storytext {
	text-align: center;
	font-family: Muli, Helvetica, sans-serif;
	font-size: 2em;
	color: var(--palegreen);
/*	text-shadow: 2px 2px 5px black;*/
}


/*Style Centered Boxes*/
.centerbox {
  border-radius: 10px;
  background-color: var(--offwhite);
  padding: 50px;
  width: 30%;
  margin: auto;
  margin-top: 50px;
  text-align: center;
  vertical-align: middle;
}

/*Style Input Forms*/
form {
  font-family: Muli;
  font-size: 30px;
  color: var(--darkgray);
  opacity: 1;
}

input[type=file], input[type=text], input[type=password], input[type=email], select {
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  border: 2px solid var(--palegreen);
  border-radius: 4px;
  box-sizing: border-box;
  width: 82%;
}

input[type=submit], input[type=button] {
  background-color: var(--palegreen);
  color: var(--darkgray);
  font-size: 18px;
  padding: 10px;
  margin: 8px 0;
  border: none;
  border-radius: 20px;
  cursor: pointer;
}

input[type=submit]:hover, input[type=button]:hover {
  font-style: italic;
  font-weight: bold;
}

.smalltext {
  display: inline;
  color: var(--darkgray);
  font-size: 15px;
}

#firstName {
  padding-right: 10px;
  width: 40%;
}

#lastName {
  width: 40%;
}

.parent {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-template-rows: 1fr;
	grid-column-gap: 0px;
	grid-row-gap: 0px;
	height: 100%;
	text-align: center;
}

.engine_info { 
  height: 100%;
}

.open_or_new { 
	padding: 100px;
	grid-area: 1 / 2 / 2 / 4; 
}

.live_engine_display { 
	border-radius: 10px;
	border: 3px solid var(--palegreen);
  height: 15%;
  margin: 5px;
}
.saved_engines { 
	border-radius: 10px;
	border: 3px solid var(--palegreen);
  height: 82%;
  margin: 5px;
}

.open_or_new button {
	width: 300px;
	margin-bottom: 30px;
	font-size: 50px;
}

.saved_engines button {
	margin-bottom: 5px;
}

.parent2 {
	display: grid;
	/* grid-template-columns: repeat(3, 1fr);
	grid-template-rows: repeat(5, 1fr); */
	grid-column-gap: 0px;
	grid-row-gap: 0px;
	height: 100%;
}

.div5 { 
	border: 1px solid var(--palegreen);
	grid-area: 1 / 1 / 2 / 4; 
}

.div6 { 
  color: var(--offwhite);
  font-family: Muli;
  font-size: 20px;
  border: 1px solid var(--palegreen);
	grid-area: 2 / 1 / 3 / 4; 
}

.div7 { 
  color: var(--offwhite);
  border: 1px solid var(--palegreen);
/*	grid-area: 3 / 1 / 9 / 1;*/
  overflow: scroll;
  overflow-x: hidden;
  width: 15%;
  height: 100%;
}

.div7 h1 {
  margin: 15px;
  font-size: 30px;
  color: var(--offwhite);
}

.div8 { 
	/*grid-area: 3 / 2 / 9 / 4;*/ 
  width: 20%;
  position: absolute;
  right: 30px;
}

.collapsible {
  cursor: pointer;
  padding: 18px;
  display: block;
  width: calc(100% - 20px);
  border: none;
  text-align: left;
  outline: none;
  font-size: 20px;
  background-color: var(--darkgray);
  color: var(--offwhite);
}

.content, .collapsible-content {
  padding: 0 18px;
  overflow: hidden;
  background-color: var(--palegreen);
  width: 94%;
  margin-left: 2%;
  margin-right: 2%;
  font-size: 20px;
}

.collapsible-content {
  display: none;  
}

.active, .collapsible:hover {
  background-color: #555;
}

.content a p{
  color: var(--darkgray);
}

.content a {
  text-decoration: none;
}

.popup {
  z-index: 2;
  display: block;
  position: absolute;
  left: 25%;
  top: 25%;
  width: 50%;
  height: 50%;
  overflow-y: scroll;
  overflow-x: hidden;
  background-color: var(--offwhite);
  text-align: center;
  border-radius: 20px;
}

.close {
  color: #aaaaaa;
  float: right;
  font-size: 50px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: #000;
  text-decoration: none;
  cursor: pointer;
}

.preview-button {
  float: right;
  cursor: pointer;
  margin-right: 1%;
  color: white;
}

.preview-button:hover {
  text-decoration: underline;
}

.history-preview {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  right: 20px;
  height: 100vh;
  /*width: 100%;*/
}

.background-blur {
  width: 100vw;
  height: 100vh;
  background-color: black;
  opacity: 0.8;
  backdrop-filter: blur(5px);
  position: fixed;
  top: 0;
  left: 0;
}

.history-preview-page {
  height: 90vh;
  width: 90vw;
  position: fixed;
  top: 5vh;
  left: 5vw;
  background-color: red;
}

.preview-nav {
  color: var(--palegreen);
  font-size: 3vw;
  cursor: pointer;
}

.preview-nav-left {
  position: fixed;
  top: 44.5vh;
  left: 1vw;
}

.preview-nav-right {
  position: fixed;
  top: 44.5vh;
  right: 1vw;
}

.preview-nav.disabled {
  opacity: 0.6;
}

.preview-close {
  position: fixed;
  top: 1vh;
  right: 1vw;
  color: var(--palegreen);
  font-size: 3vw;
  cursor: pointer;
}

input[type="submit"].popout {
  position: fixed;
  top: calc(1vh + 0.375vw);
  left: 1.375vw;
  color: var(--palegreen);
  font-size: 2.25vw;
  cursor: pointer;
  background-color: transparent;
  min-width: 0;
  width: 2.25vw;
  height: 2.25vw;
  padding: 0;
  outline: none;
}

.popout {
  position: fixed;
  top: calc(1vh + 0.375vw);
  left: 1.375vw;
  color: var(--palegreen);
  font-size: 2.25vw;
  background-color: transparent;
  min-width: 0;
  width: 2.25vw;
  height: 2.25vw;
  padding: 0;
}

.mimic-link {
  color: var(--offwhite);
  text-decoration: underline;
  text-align: center;
  display: block;
  width: 100%;
  text-decoration: underline;
  font-size: 32px;
  margin-bottom: 25px;
}

#new-story-pane {
  display: flex;
}

#page-pane { 
  /*width: 1000px;*/
  min-width: 60%;
  max-width: 67%;
}

#story-name {
  width: 50%;
}

#page-list-parent {
  /* max-height: 100%; */
  max-height: 850px;
  display: flex; 
  width: 100%;
}

#save_story {
  background: #838DD8; 
  border-color: #838DD8;
}

#discard_story {
  background: #D88D83; 
  border-color: #D88D83;
}

.fa-heart {
  color: var(--palegreen);
  font-size: 30px;
  cursor: pointer;
  vertical-align: top;
  margin-top: 10px;
}

.story-nav {
  position: fixed;
  left: 90px;
  top: 38px;
  height: 50px;
}

.story-nav input[type="submit"] {
  margin: 0;
  margin-right: 15px;
}

.story-content {
  margin-top: 150px;
  margin-left: 25px;
  margin-right: 25px;
}

.hidden-form {
  display: inline-block;
}

input[type="submit"].storylink {
  color: white;
  background-color: transparent;
  text-align: center;
  width: 100%;
  text-decoration: underline;
  font-size: 32px;
}

.collapsible-content .hidden-form input[type="submit"], .content .hidden-form input[type="submit"] {
  margin: 0;
  color: white;
  text-decoration: underline;
  text-align: left;
}

#parent-nodes, #child-nodes {
  display: flex;
  width: 100%;
  overflow: auto;
  text-align: center;
  justify-content: center;
}

#editor_wizard > input, #editor_wizard > label {
  width: 100%;
}

#editor_wizard {
  z-index: 1;
  width: 60%;
  height: 70%;
  opacity: 1;
}

.error-message {
  background-color: #dc3545;
  color: white;
  padding: 10px;
  border-radius: 10px;
}

p#page-pane-child {
  text-align: center;
  font-family: Muli, Helvetica, sans-serif;
  font-size: 1em;
  color: var(--palegreen);
/*  text-shadow: 2px 2px 5px black;*/
}

p.link_text {
  text-align: center;
  font-family: Muli, Helvetica, sans-serif;
  font-size: 1em;
  color: var(--offwhite);
  text-decoration: underline;
/*  text-shadow: 2px 2px 5px black;*/
}

button.page_button {
  font-size: 15px;
  margin: 0px;
  margin-left: 4px;
  margin-top: 4px;
}

button#view_storymap {
  font-size: 15px;
  margin: 0px;
  margin-left: 4px;
  margin-top: 4px;
  background-color: var(--paleyellow);
  border-color: var(--paleyellow);
}

button.page_op {
  background: var(--paleyellow);
  border: solid 1px var(--paleyellow);
  margin: 0px;
  margin-top: 4px;
}

button.engine_op {
  background: var(--paleorange);
  border: solid 1px var(--paleorange);
  margin: 0px;
  margin-left: 4px;
}

.div7 button {
  width: 90%;
  white-space: nowrap;
  overflow: hidden; 
}

.div8 button {
  width: 250px;
  white-space: nowrap;
  overflow: hidden; 
}

.table-container {
  padding: 25px 50px;
  margin-left: 10vw;
  width: calc(80vw - 100px);
  background-color: var(--offwhite);
  border-radius: 10px;
}

table {
  color: black;
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

th:first-child, td:first-child {
  width: 50px;
}

th {
  padding: 15px;
  margin-top: 25px;
  border-bottom: 2px solid #777;
}

td {
  padding: 15px;
  border-bottom: 1px solid #777;
}

tr:last-child td {
  border-bottom: none;
}

.admin-toggle {
  cursor: pointer;
  font-size: 25px;
}

.armed {
  background: var(--palered);
  border: solid 1px var(--palered);
}

.disarmed {
  background: var(--paleorange);
  border: solid 1px var(--paleorange);
}

/* #map_iframe {
  position: absolute;
  width: 1000px;
  height: 1000px;
  top: 50px;
  left: 50px;
  z-index: 5;
} */


#map_frame {
  z-index: 3;
  width: 80%;
  height: 80%;
  background-color: white;
  display: none;
  position: absolute;
  left: 10%;
  top: 10%;
  overflow: hidden;
}

.error {
  font-size: 15px;
  color: red;
}

